# 7dtd-server-manager

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.renderer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_0d463287dffeNvCC10AsbGtqKh.json  ses_0d4633898ffel3cXRUNARx5VcP.json
docs/contexts/: build-packaging.md  common.md  config-profiles-logs.md  renderer.md  tauri-backend.md  telnet-and-api.md  testing.md
docs/runbooks/: RELEASE.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: generate-telnet-commands.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/common/: constants.ts  types.ts
src/main/: logger.ts  main.ts  parsers.ts  profile-manager.ts  server-api.ts  server-config.ts  telnet-client.ts
src/renderer/: app.ts  command-builder.ts  desktop-api.d.ts  index.html  map-viewer.ts  preload.ts  prompt-modal.ts  result-modal.ts  server-config-editor.ts  styles.css
tests/: logger.test.ts  mock-server.test.ts  parsers.test.ts  profile-manager.test.ts  renderer-command-builder.test.ts  server-config.test.ts  telnet-client.test.ts  telnet-commands-generator.test.ts
