[package]
name = "sevendtd-server-manager"
version = "1.0.0"
description = "A desktop management tool for 7 Days to Die dedicated servers via Telnet/RCON"
authors = ["7dtd-server-manager contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sakuradairong/7dtd-server-manager"
homepage = "https://github.com/sakuradairong/7dtd-server-manager#readme"

[lib]
name = "sevendtd_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
opener = "0.7"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
